--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
             <artifactId>maven-plugin-api</artifactId>
             <version>3.3.9</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.github.sommeri</groupId>
             <artifactId>less4j</artifactId>
@@ -52,7 +52,19 @@
             <version>2.4.7</version>
         </dependency>
 
-        <!-- dependencies to annotations -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.21</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.21</version>
+        </dependency>
+
+        <!-- dependencies file annotations -->
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
