--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.cathive.sass</groupId>
+            <artifactId>sass-java</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.3.9</version>
@@ -104,9 +110,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
                 <version>3.3</version>
-                <configuration>
-                    <goalPrefix>feast</goalPrefix>
-                </configuration>
                 <executions>
                     <execution>
                         <id>default-descriptor</id>
