--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
         <kotlin.version>1.1.3-2</kotlin.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>kotlinx</id>
+            <url>https://dl.bintray.com/kotlin/kotlinx/</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -111,6 +117,16 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+            <version>0.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-jdk8</artifactId>
+            <version>0.16</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
